Imported GNU Classpath 0.90        * scripts/makemake.tcl: Set gnu/java/awt/peer/swing to ignore.        * gnu/classpath/jdwp/VMFrame.java (SIZE): New constant.        * java/lang/VMCompiler.java: Use gnu.java.security.hash.MD5.        * java/lang/Math.java: New override file.        * java/lang/Character.java: Merged from Classpath.        (start, end): Now 'int's.        (canonicalName): New field.        (CANONICAL_NAME, NO_SPACES_NAME, CONSTANT_NAME): New constants.        (UnicodeBlock): Added argument.        (of): New overload.        (forName): New method.        Updated unicode blocks.        (sets): Updated.        * sources.am: Regenerated.        * Makefile.in: Likewise.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@111942 138bc75d-0d04-0410-961f-82ee72b054a4